Fix wrapping of search button in sidebar gadget on linux
svn commit r33932

--- a/themes/stuff/www/styles/theme.css
+++ b/themes/stuff/www/styles/theme.css
@@ -219,7 +219,7 @@ body {
 }
 
 .blorg-search-gadget input {
-	margin-right: 10px;
+	margin-right: 8px;
 	padding: 5px 10px;
 }
 .blorg-search-gadget input#keywords {
